--- a/src/App.scss
+++ b/src/App.scss
@@ -202,7 +202,7 @@
       border: none;
       padding: 0.8rem 2rem;
       border-radius: 30px;
-      color: white;
+      color: #fff;
       cursor: pointer;
     }
   }
