--- a/src/App.scss
+++ b/src/App.scss
@@ -168,7 +168,7 @@
     gap: 2rem;
 
     .card {
-      background: white;
+      background: #fff;
       padding: 2rem;
       border-radius: 10px;
       text-align: left;
@@ -177,7 +177,7 @@
         margin-bottom: 1rem;
       }
       p {
-        color: #9e9aa7;
+        color: hsl(257, 7%, 63%);
       }
     }
   }
@@ -191,14 +191,14 @@
   padding-top: 4rem;
 
   .cta {
-    background: #3b3054;
+    background: hsl(257, 27%, 26%);
     padding: 4rem 2rem;
     border-radius: 10px;
     h2 {
       margin-bottom: 1rem;
     }
     button {
-      background: #2acfcf;
+      background: hsl(180, 66%, 49%);
       border: none;
       padding: 0.8rem 2rem;
       border-radius: 30px;
@@ -228,7 +228,7 @@
 
       ul {
         list-style: none;
-        color: #bfbfbf;
+        color: hsl(0, 0%, 75%);
         li {
           margin-bottom: 0.5rem;
         }
