--- a/src/App.scss
+++ b/src/App.scss
@@ -60,11 +60,11 @@
   align-content: center;
   // padding: 5rem 8%;
   background: #ce5d5d;
+  height: 80vh;
 
   .hero-content {
     max-width: 30%;
     padding: 3rem 8%;
-    height: 60vh;
     h1 {
       font-size: 3rem;
       font-weight: 700;
@@ -94,21 +94,36 @@
   background: #f0f1f6;
   padding: 3rem 8%;
   position: relative;
-  margin-top: 2rem;
+  // margin: 
+  // padding: 3rem 8%;
+  // top: -40px;
+  // margin-top: 2rem;
 
   .shorten-box {
     background: hsl(257, 27%, 26%);
+    background-image: url(assets/images/bg-shorten-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 10px;
     padding: 2rem;
     display: flex;
+    width: 80%;
     gap: 1rem;
+    top: -50px;
+    position: absolute;
 
     input {
       flex: 1;
       padding: 1rem;
-      border-radius: 10px;
+      border-radius: 8px;
       border: none;
       font-size: 1rem;
+      outline: none;
+    }
+    input:focus{
+      border-radius: 8px;
+      // border-color: #ce5d5d;
+      border: 3px solid hsl(0, 87%, 67%);
     }
 
     button {
