--- a/src/App.scss
+++ b/src/App.scss
@@ -56,9 +56,11 @@
     &.signup {
       background: hsl(180, 66%, 49%);
       color: white;
-    }
-    &:hover{
-      background-color: hsl(180, 35%, 48%);
+      
+      //for the signup hover state
+      &:hover{
+        background-color: hsl(180, 35%, 48%);
+      }
     }
   }
 }//header style
@@ -110,12 +112,15 @@
   background: #f0f1f6;
   padding: 3rem 8%;
   position: relative;
-  margin-top: 2rem;
+  // margin-top: 2rem;
 
   .shorten-box {
     background: hsl(257, 27%, 26%);
-    border-radius: 10px;
-    padding: 2rem;
+    background-image: url(assets/images/bg-shorten-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 8px;
+    padding: 1.5rem;
     display: flex;
     gap: 1rem;
 
@@ -125,13 +130,20 @@
       border-radius: 10px;
       border: none;
       font-size: 1rem;
+      outline: none;
+      // transition: 0.2s ease; not needed for the input
+    }
+    input:focus{
+      border-radius: 8px;
+      // border-color: #ce5d5d;
+      border: 3px solid hsl(0, 87%, 67%);
     }
 
     button {
       background: hsl(180, 66%, 49%);
-      color: white;
+      color: #fff;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       padding: 1rem 2rem;
       cursor: pointer;
       transition: 0.8s ease;
@@ -148,7 +160,7 @@
     justify-content: space-between;
     padding: 1rem;
     margin-top: 1rem;
-    border-radius: 10px;
+    border-radius: 8px;
     align-items: center;
 
     .short-side {
@@ -158,6 +170,10 @@
 
       a {
         color: hsl(180, 66%, 49%);
+
+        &:hover{
+          color: hsl(180, 35%, 48%);
+        }
       }
 
       button {
@@ -166,6 +182,12 @@
         border: none;
         border-radius: 10px;
         padding: 0.5rem 1rem;
+        transition: 0.8s ease;
+
+        
+        &:hover{
+          background-color: hsl(257, 27%, 26%);
+        }
       }
     }
   }
