--- a/src/App.scss
+++ b/src/App.scss
@@ -114,42 +114,49 @@
   position: relative;
   // margin-top: 2rem;
 
-  .shorten-box {
-    background: hsl(257, 27%, 26%);
-    background-image: url(assets/images/bg-shorten-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 8px;
-    padding: 1.5rem;
-    display: flex;
-    gap: 1rem;
+  .toMargin{
+    //to positon the input nav and i make sure i chnage the div in the cimponent
+    position: absolute;
+    width: 84%;
+    top: -50px;
 
-    input {
-      flex: 1;
-      padding: 1rem;
-      border-radius: 10px;
-      border: none;
-      font-size: 1rem;
-      outline: none;
-      // transition: 0.2s ease; not needed for the input
-    }
-    input:focus{
+    .shorten-box {
+      background: hsl(257, 27%, 26%);
+      background-image: url(assets/images/bg-shorten-desktop.svg);
+      background-repeat: no-repeat;
+      background-size: cover;
       border-radius: 8px;
-      // border-color: #ce5d5d;
-      border: 3px solid hsl(0, 87%, 67%);
-    }
-
-    button {
-      background: hsl(180, 66%, 49%);
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: 1rem 2rem;
-      cursor: pointer;
-      transition: 0.8s ease;
-
-      &:hover{
-        background-color: hsl(180, 35%, 48%);
+      padding: 1.5rem;
+      display: flex;
+      gap: 1rem;
+  
+      input {
+        flex: 1;
+        padding: 1rem;
+        border-radius: 10px;
+        border: none;
+        font-size: 1rem;
+        outline: none;
+        // transition: 0.2s ease; not needed for the input
+      }
+      input:focus{
+        border-radius: 8px;
+        // border-color: #ce5d5d;
+        border: 3px solid hsl(0, 87%, 67%);
+      }
+  
+      button {
+        background: hsl(180, 66%, 49%);
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        padding: 1rem 2rem;
+        cursor: pointer;
+        transition: 0.8s ease;
+  
+        &:hover{
+          background-color: hsl(180, 35%, 48%);
+        }
       }
     }
   }
