--- a/src/App.scss
+++ b/src/App.scss
@@ -212,6 +212,7 @@
   background: #f0f1f6;
   padding: 1rem 8%;
   text-align: center;
+  height: 100vh;
 
   .texts{
     h2 {
@@ -230,12 +231,42 @@
     margin-top: 3rem;
     gap: 2rem;
 
-    .card {
+    .card1 {
       background: white;
       padding: 2rem;
       border-radius: 10px;
       text-align: left;
       flex: 1;
+      h3 {
+        margin-bottom: 1rem;
+        color: hsl(257, 27%, 26%);
+      }
+      p {
+        color: hsl(257, 7%, 63%);
+      }
+    }
+    .card2 {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: left;
+      flex: 1;
+      margin-top: 30px;
+      h3 {
+        margin-bottom: 1rem;
+        color: hsl(257, 27%, 26%);
+      }
+      p {
+        color: hsl(257, 7%, 63%);
+      }
+    }
+    .card3 {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: left;
+      flex: 1;
+      margin-top: 70px;
       h3 {
         margin-bottom: 1rem;
         color: hsl(257, 27%, 26%);
