--- a/src/App.scss
+++ b/src/App.scss
@@ -278,36 +278,37 @@
   }
 }//end for stat
 
+//cta style
+.cta{
+  background-color: hsl(257, 27%, 26%);
+  background-image: url(assets/images/bg-boost-desktop.svg);
+  padding: 4rem 2rem;
+  border-radius: 10px;
+  h2 {
+    margin-bottom: 1rem;
+    // font-size: 2rem;
+  }
+  button {
+    background: hsl(180, 66%, 49%);
+    color: #fff;
+    border: none;
+    border-radius: 23px;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    transition: 0.8s ease;
+
+    &:hover{
+      background-color: hsl(180, 35%, 48%);
+    }
+  }
+}
+
 //footer part
 .footer {
   background: #232127;
   color: white;
   text-align: center;
   padding-top: 4rem;
-
-  .cta {
-    background-color: hsl(257, 27%, 26%);
-    background-image: url(assets/images/bg-boost-desktop.svg);
-    padding: 4rem 2rem;
-    border-radius: 10px;
-    h2 {
-      margin-bottom: 1rem;
-      // font-size: 2rem;
-    }
-    button {
-      background: hsl(180, 66%, 49%);
-      color: #fff;
-      border: none;
-      border-radius: 23px;
-      padding: 1rem 3rem;
-      cursor: pointer;
-      transition: 0.8s ease;
-
-      &:hover{
-        background-color: hsl(180, 35%, 48%);
-      }
-    }
-  }
 
   .footer-links {
     margin-top: 4rem;
